@@ -1,6 +1,9 @@
 # cat=basic; type=int; label=Use configuration : Uid of configuration record in table tx_igldapssoauth_config.
 uidConfiguration = 1
 
+# cat=basic; type=boolean; label=Force lowercase username : If checked, usernames will be always be stored lowercased. Usefull for case-sensitive databases.
+forceLowerCaseUsername = 0
+
 # cat=basic/enable; type=boolean; label=Groups from membership : If checked, obtain groups from user with membership attribute. Else, obtain groups object indirectly with DN of user.
 evaluateGroupsFromMembership = 0
 
